--- a/.github/workflows/pipelineCC.yml
+++ b/.github/workflows/pipelineCC.yml
@@ -11,6 +11,9 @@ on:
         description: 'Repositorio base (ej: rodrigorojasg/testSpring)'
         required: true
         type: string
+  push:  # <- este bloque es nuevo y temporal
+    paths:
+      - .github/workflows/pipelineCC.yml
 
 
 jobs:
